--- a/SP4/Assembly-CSharp.csproj
+++ b/SP4/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\0. Main Menu\GameMusicScript.cs" />
+     <Compile Include="Assets\Scripts\0. Main Menu\MusicButton.cs" />
      <Compile Include="Assets\Scripts\0. Main Menu\PlayButton.cs" />
      <Compile Include="Assets\Scripts\01. Spray Water\FireObject.cs" />
      <Compile Include="Assets\Scripts\01. Spray Water\LevelInit.cs" />
@@ -71,6 +72,7 @@
      <Compile Include="Assets\Scripts\08. ERP Game\SpawnCarScript.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\GlobalVariables.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\InstructionText.cs" />
+     <Compile Include="Assets\Scripts\0A. All Levels\MainCameraScript.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\MusicManagerScript.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\TimerScript.cs" />
      <Compile Include="Assets\Scripts\0B. Level Transition\LevelTransition.cs" />
@@ -83,7 +85,6 @@
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\BackGroundReGenerate.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\Obstacles.cs" />
-     <Compile Include="Assets\Scripts\11. Quiz\GUIforQuiz.cs" />
      <Compile Include="Assets\Scripts\11. Quiz\QuizQuestions.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\BoatScript.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\DragonBoatLevel.cs" />
