--- a/SP4/Assembly-CSharp-vs.csproj
+++ b/SP4/Assembly-CSharp-vs.csproj
@@ -100,7 +100,113 @@
      <Compile Include="Assets\TouchScript\Examples\General\Tap\Scripts\Tap_Spawner.cs" />
      <Compile Include="Assets\TouchScript\Examples\_misc\Scripts\Example.cs" />
      <Compile Include="Assets\TouchScript\Examples\_misc\Scripts\Examples.cs" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_button_background_gray.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_feed_item_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-sw350dp-land\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_tabbar_back_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_header_signin.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_profile_icon.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_background_gradient.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ko\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-fr\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_activity_login.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pl\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ko\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_sign_in.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ar\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_rounded_bottom_right_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_rounded_bottom_left_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_popup_edit_video.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-sw600dp\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_header_other_details.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_rounded_top_right_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-fr\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_feed_comment_item.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_header_intermediate.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-th\kamcord_styles.xml" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_header_profile_details.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-th\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-th\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ru\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-zh-rTW\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pl\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pl\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-it\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_watch_icon.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_feed_featured_item.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ja\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pt\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_button_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_rounded_top_left_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_title_gradient.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_like_toggle.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_tab_background_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_progress.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pt-rPT\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pt\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_share.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_refresh_scale_width_drawable.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-de\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_feed_item_fade.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_player.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_buffer.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_thumb_style.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-fr\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_feed_video_item.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_feed_follow_item.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_change_creds.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-es\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_list.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-tr\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_feed_item_fade_selected.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_share_grid_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-sw350dp-land\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_refresh_scale_height_drawable.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_header_pull.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_merge_platform.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_share_gradient.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_share_icon.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_thumb.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\color\kamcord_share_widget_text.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_forgot_password.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-es\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_toggle_selector.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_media_controller.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ru\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout-sw600dp\z_kamcord_fragment_share.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_seekbar_progress_style.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ar\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-de\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_activity.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-es\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout-land\z_kamcord_fragment_share.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-land\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ru\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_inset_duration_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ja\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-it\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-land\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_feed_featured.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-tr\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-pt-rPT\kamcord_dimens.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_web.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_share_edit_background.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout-land\z_kamcord_activity.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-zh-rCN\kamcord_strings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_create_profile.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout-sw600dp\z_kamcord_activity_login.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_refresh_drawable.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_profile_settings.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout\z_kamcord_fragment_edit_profile.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-sw600dp\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\drawable\kamcord_textview_fading_edge.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-de\kamcord_styles.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\layout-sw600dp\z_kamcord_activity.xml" />
+     <None Include="Assets\Plugins\Android\kamcord\res\values-ja\kamcord_styles.xml" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>C:/NEW_TEAM5_SP4_LRD/SP4/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
@@ -110,6 +216,10 @@
  <Reference Include="TouchScript">
  <HintPath>C:/NEW_TEAM5_SP4_LRD/SP4/Assets/TouchScript/Plugins/TouchScript.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
+      <Project>{9EFE5F5F-09A1-1EBD-8CB0-AB63D3E8460B}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
