--- a/SP4/Assembly-CSharp.csproj
+++ b/SP4/Assembly-CSharp.csproj
@@ -85,7 +85,7 @@
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\BackGroundReGenerate.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\Obstacles.cs" />
-     <Compile Include="Assets\Scripts\11. Quiz\GUIforQuiz.cs" />
+     <Compile Include="Assets\Scripts\11. Quiz\QuizQuestions.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\BoatScript.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\DragonBoatLevel.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\arrowScript.cs" />
