--- a/SP4/Assembly-CSharp.csproj
+++ b/SP4/Assembly-CSharp.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Users/user/Desktop/Unity4.6.2/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Users/user/Desktop/Unity4.6.2/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -85,7 +85,7 @@
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\BackGroundReGenerate.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\10. FlappyAeroPlane\Obstacles.cs" />
-     <Compile Include="Assets\Scripts\11. Quiz\GUIforQuiz.cs" />
+     <Compile Include="Assets\Scripts\11. Quiz\QuizQuestions.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\BoatScript.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\DragonBoatLevel.cs" />
      <Compile Include="Assets\Scripts\13. Dragon Boat\arrowScript.cs" />
@@ -104,10 +104,10 @@
      <Compile Include="Assets\TouchScript\Examples\_misc\Scripts\Examples.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Users/user/Desktop/Unity4.6.2/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="TouchScript">
- <HintPath>C:/Users/user/Desktop/NEW_TEAM5_SP4_LRD/SP4/Assets/TouchScript/Plugins/TouchScript.dll</HintPath>
+ <HintPath>C:/Users/Charlene/Desktop/NEW_TEAM5_SP4_LRD/SP4/Assets/TouchScript/Plugins/TouchScript.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
