--- a/SP4/Assembly-CSharp.csproj
+++ b/SP4/Assembly-CSharp.csproj
@@ -46,7 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\0. Main Menu\CreditsButton.cs" />
      <Compile Include="Assets\Scripts\0. Main Menu\GameMusicScript.cs" />
+     <Compile Include="Assets\Scripts\0. Main Menu\GoToLevelButton.cs" />
+     <Compile Include="Assets\Scripts\0. Main Menu\LevelSelectButton.cs" />
      <Compile Include="Assets\Scripts\0. Main Menu\MusicButton.cs" />
      <Compile Include="Assets\Scripts\0. Main Menu\PlayButton.cs" />
      <Compile Include="Assets\Scripts\01. Spray Water\FireObject.cs" />
@@ -70,6 +73,7 @@
      <Compile Include="Assets\Scripts\08. ERP Game\GantryScript.cs" />
      <Compile Include="Assets\Scripts\08. ERP Game\ParticleScript.cs" />
      <Compile Include="Assets\Scripts\08. ERP Game\SpawnCarScript.cs" />
+     <Compile Include="Assets\Scripts\0A. All Levels\BackButton.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\GlobalVariables.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\InstructionText.cs" />
      <Compile Include="Assets\Scripts\0A. All Levels\MainCameraScript.cs" />
@@ -110,7 +114,7 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="TouchScript">
- <HintPath>C:/Users/Mr. Fatal/Desktop/School Work/NEW_TEAM5_SP4_LRD/SP4/Assets/TouchScript/Plugins/TouchScript.dll</HintPath>
+ <HintPath>C:/Users/Shawn/Desktop/DM2295 Game Development Project/NEW_TEAM5_SP4_LRD/SP4/Assets/TouchScript/Plugins/TouchScript.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
